[add]: overhaul hud